test/descriptor/seman/corr05.v3
//@seman = DescriptorError @ 4:19
class DA describes A { }
class A descriptor DA { }
class B extends A { }  // error: B must declare a descriptor since A has one
